Trying to fix overlapping of flexbox
trying to fix

--- a/LaravelApp-app/resources/css/style.css
+++ b/LaravelApp-app/resources/css/style.css
@@ -1,70 +1,53 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @font-face {
     font-family: Quiapo;
     src: url("../fonts/Quiapo_Free.otf");
 }
-
 @font-face {
     font-family: Maragsa;
     src: url("../fonts/Maragsâ-Display.otf");
 }
 
-@font-face {
-    font-family: FA-Regular;
-    src: url(".../fonts/fa-regular-400.ttf");
-}
 
 *{
     margin: 0;
     padding: 0;
-
+    
 }
-
-.header {
+.header{
     min-height: 100vh;
     width: 100%;
     background-color: #201b15;
 }
-
-.header-logo {
+.header-logo{
     width: 350px;
     height: auto;
 }
-
-nav {
+nav{
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
     background-color: #201b15;
 }
-
-nav img {
+nav img{
     width: 150px;
 }
-
-.nav-links {
+.nav-links{
     flex: 1;
     text-align: right;
 }
-
-.nav-links ul li {
+.nav-links ul li{
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
-
-.nav-links ul li a {
+.nav-links ul li a{
     color: #fff;
     text-decoration: none;
     font-size: 20px;
 }
-
-.nav-links ul li::after {
+.nav-links ul li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -73,66 +56,56 @@ nav img {
     margin: auto;
     transition: 0.5s;
 }
-
-.nav-links ul li:hover::after {
+.nav-links ul li:hover::after{
     width: 100%;
 }
-
-.body-logo {
+.body-logo{
     margin-top: 300px;
     width: 200px;
 }
-
-.text-box {
+.text-box{
     width: 90%;
     color: black;
     position: absolute;
     top: 30%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%,-50%);
     text-align: center;
 }
-
-.text-box h1 {
+.text-box h1{
     margin-top: 20px;
     font-size: 125px;
     font-family: Quiapo;
     color: #efe1ba;
 }
-
-.text-box #one {
+.text-box #one{
     font-size: 40px;
     font-family: Maragsa;
     color: #d79922;
 }
-
-.text-box #two {
+.text-box #two{
     font-size: 40px;
     font-family: Maragsa;
     color: #efe1ba;
 }
-
-.text-box #three {
+.text-box #three{
     margin-top: 50px;
     font-size: 40px;
     font-family: Maragsa;
     color: #efe1ba;
 }
-
-.search-box {
+.search-box{
     height: 50px;
     width: 600px;
-    margin: 650px auto 0;
+    margin:  650px auto 0;
     border-bottom: 3px solid #d79922;
 }
-
-.row {
+.row{
     display: flex;
     align-items: center;
     margin-left: 5px;
 }
-
-input {
+input{
     flex: 1;
     height: 50px;
     background: transparent;
@@ -141,42 +114,39 @@ input {
     font-size: 18px;
     color: #d79922;
 }
-
-.body-one {
+.body-one{
     min-height: 100vh;
     width: 100%;
     background-color: #efe1ba;
 }
-
-button {
+button{
     background: transparent;
     border: 0;
     outline: 0;
 }
 
-button .fa-solid {
+button .fa-solid{
     width: 25px;
     color: #447ff5;
     font-size: 25px;
     cursor: pointer;
 }
 
-::placeholder {
+::placeholder{
     color: #efe1ba;
 }
 
-.result-box ul {
+.result-box ul{
     border-top: 1px solid #999;
     padding: 15px 10px;
 }
 
-.result-box ul li {
+.result-box ul li{
     list-style: none;
     border-radius: 3px;
     padding: 15px 10px;
     cursor: pointer;
 }
-
-.result-box ul li:hover {
+.result-box ul li:hover{
     background: #3366cc;
 }
